--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -43,13 +43,18 @@
     <Compile Include="Common\SerializeHelper.cs" />
     <Compile Include="Common\GameStorage.cs" />
     <Compile Include="Controllers\GameConfig.cs" />
+    <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\GemRepositoryFactory.cs" />
+    <Compile Include="Controllers\PlayerChoice.cs" />
+    <Compile Include="Controllers\PlayersRoundManager.cs" />
+    <Compile Include="Controllers\PlayerTurn.cs" />
+    <Compile Include="Controllers\RoundManager.cs" />
     <Compile Include="Entities\Card.cs" />
     <Compile Include="Entities\CardHolder.cs" />
     <Compile Include="Entities\CardRepository.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\DtoFactory.cs" />
-    <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Controllers\GameData.cs" />
     <Compile Include="Entities\GemRepository.cs" />
     <Compile Include="Entities\Price.cs" />
     <Compile Include="Dto\CardDto.cs" />
@@ -61,7 +66,7 @@
     <Compile Include="Dto\PlayerDto.cs" />
     <Compile Include="Common\Gem.cs" />
     <Compile Include="Dto\GemRepositoryDto.cs" />
-    <Compile Include="Entities\Player.cs" />
+    <Compile Include="Entities\PlayerData.cs" />
     <Compile Include="Dto\PriceDto.cs" />
     <Compile Include="Extensions\PriceExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
