--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,19 +44,27 @@
     <Compile Include="Common\GameStorage.cs" />
     <Compile Include="Controllers\GameConfig.cs" />
     <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Controllers\GameRoundManager.cs" />
     <Compile Include="Controllers\GemRepositoryFactory.cs" />
     <Compile Include="Controllers\PlayerActionProcessorManager.cs" />
     <Compile Include="Controllers\PlayerChoice.cs" />
+    <Compile Include="Controllers\PlayerRoundStatus.cs" />
     <Compile Include="Controllers\PlayersRoundManager.cs" />
     <Compile Include="Controllers\PlayerTurn.cs" />
     <Compile Include="Controllers\RoundManager.cs" />
+    <Compile Include="Dto\GameRoundManagerDto.cs" />
+    <Compile Include="Dto\PlayerRoundStatusDto.cs" />
     <Compile Include="Entities\Card.cs" />
     <Compile Include="Entities\CardHolder.cs" />
     <Compile Include="Entities\CardRepository.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\DtoFactory.cs" />
     <Compile Include="Controllers\GameData.cs" />
+    <Compile Include="PlayerChoiceProcessors\MainPlayerActionProcessorBase.cs" />
+    <Compile Include="Player\DummyPlayerConnection.cs" />
     <Compile Include="Entities\GemHolder.cs" />
+    <Compile Include="Player\IPlayerConnection.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Entities\Price.cs" />
     <Compile Include="Dto\CardDto.cs" />
     <Compile Include="Dto\CardHolderDto.cs" />
@@ -66,9 +74,10 @@
     <Compile Include="Dto\GemCountDto.cs" />
     <Compile Include="Dto\PlayerDto.cs" />
     <Compile Include="Common\Gem.cs" />
-    <Compile Include="Dto\GemRepositoryDto.cs" />
+    <Compile Include="Dto\GemHolderDto.cs" />
     <Compile Include="Entities\PlayerData.cs" />
     <Compile Include="Dto\PriceDto.cs" />
+    <Compile Include="Player\RealPlayerConnection.cs" />
     <Compile Include="Extensions\PriceExtensions.cs" />
     <Compile Include="Interfaces\IPlayerActionProcessor.cs" />
     <Compile Include="PlayerChoiceParameters\BookCardAndTake1GoldParameters.cs" />
