--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -42,30 +42,31 @@
   <ItemGroup>
     <Compile Include="Common\SerializeHelper.cs" />
     <Compile Include="Common\GameStorage.cs" />
-    <Compile Include="Controllers\GameConfig.cs" />
+    <Compile Include="Common\Shuffler.cs" />
+    <Compile Include="Entities\GameConfig.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\GameRoundManager.cs" />
     <Compile Include="Controllers\GemRepositoryFactory.cs" />
     <Compile Include="Controllers\PlayerActionProcessorManager.cs" />
-    <Compile Include="Controllers\PlayerMainAction.cs" />
-    <Compile Include="Controllers\PlayerRoundStatus.cs" />
-    <Compile Include="Controllers\PlayersRoundManager.cs" />
-    <Compile Include="Controllers\MainAction.cs" />
-    <Compile Include="Controllers\RoundManager.cs" />
+    <Compile Include="Entities\InactiveCardRepository.cs" />
+    <Compile Include="Entities\PlayerMainAction.cs" />
+    <Compile Include="Entities\PlayerRoundStatus.cs" />
+    <Compile Include="Controllers\PlayersCircularManager.cs" />
+    <Compile Include="Entities\MainTurnAction.cs" />
+    <Compile Include="Common\CircularManager.cs" />
     <Compile Include="Dto\GameRoundManagerDto.cs" />
     <Compile Include="Dto\PlayerRoundStatusDto.cs" />
     <Compile Include="Entities\Card.cs" />
     <Compile Include="Entities\CardHolder.cs" />
-    <Compile Include="Entities\CardRepository.cs" />
+    <Compile Include="Entities\ActiveCardRepository.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\DtoFactory.cs" />
-    <Compile Include="Controllers\GameData.cs" />
-    <Compile Include="Extensions\GemHolderExtensions.cs" />
+    <Compile Include="Entities\GameData.cs" />
     <Compile Include="PlayerChoiceProcessors\MainPlayerActionProcessorBase.cs" />
-    <Compile Include="Player\DummyPlayerConnection.cs" />
+    <Compile Include="Players\DummyPlayerConnection.cs" />
     <Compile Include="Entities\GemHolder.cs" />
-    <Compile Include="Player\IPlayerConnection.cs" />
-    <Compile Include="Player\Player.cs" />
+    <Compile Include="Players\IPlayerConnection.cs" />
+    <Compile Include="Players\Player.cs" />
     <Compile Include="Entities\Price.cs" />
     <Compile Include="Dto\CardDto.cs" />
     <Compile Include="Dto\CardHolderDto.cs" />
@@ -78,7 +79,7 @@
     <Compile Include="Dto\GemHolderDto.cs" />
     <Compile Include="Entities\PlayerData.cs" />
     <Compile Include="Dto\PriceDto.cs" />
-    <Compile Include="Player\RealPlayerConnection.cs" />
+    <Compile Include="Players\RealPlayerConnection.cs" />
     <Compile Include="Extensions\PriceExtensions.cs" />
     <Compile Include="Interfaces\IPlayerActionProcessor.cs" />
     <Compile Include="PlayerChoiceParameters\BookCardAndTake1GoldParameters.cs" />
